--- a/sobreNostros.html
+++ b/sobreNostros.html
@@ -317,7 +317,7 @@
       </div>
     </section>
 
-    <section class="team pY-8">
+    <!-- <section class="team pY-8">
       <header class="container text-center">
         <h2 class="c-main text-transform-uppercase fs-4">nuestro equipo</h2>
 
@@ -371,7 +371,7 @@
           <li class="next">></li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <footer class="footer bg-black pY-5">
       <div class="container">
