social media CP

--- a/socialMedia.html
+++ b/socialMedia.html
@@ -90,57 +90,65 @@
       <form class="modal-content pago">
         <span class="close">&times;</span>
 
-        <div class="d-flex flex-direction-reverse-column">
-          <div>
-            <h2 class="text-transform-uppercase font-jost fs-2">
-              Gestión de redes sociales
-            </h2>
-            <p class="line-height-md fs-small mT-1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reiciendis modi magnam qui similique incidunt iure laborum
-              aperiam. Animi, tenetur in.
-            </p>
+        <div
+          class="d-flex flex-direction-reverse-column bg-white flexContainer__box--radius border-dark pY-2 pX-2"
+        >
+          <div class="flex-1">
+            <h2 class="text-transform-uppercase fs-md">Paquete Despegue</h2>
+            <p class="line-height-md fs-small mT-1">Para empezar tu viaje</p>
 
-            <ul class="pago__radioBox mT-2">
-              <!-- li start -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">1</label>
-                <input type="radio" name="select" class="pago__inputRadio" />
-              </li>
+            <ul class="fs-2 mT-2">
               <!-- li end -->
-              <!-- li star -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">2</label>
-                <input
-                  type="radio"
-                  name="select"
-                  class="pago__inputRadio"
-                  checked
+              <li class="d-flex align-items-center gap-1">
+                <img
+                  src="images/CP/comprobado.png"
+                  alt=""
+                  class="pago__checked"
                 />
+
+                <p><span class="fw-bold">Gestión</span> de 2 redes sociales.</p>
               </li>
               <!-- li end -->
-              <!-- li start -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">3</label>
-                <input type="radio" name="select" class="pago__inputRadio" />
+
+              <!-- li end -->
+              <li class="d-flex align-items-center gap-1 mT-2">
+                <img
+                  src="images/CP/comprobado.png"
+                  alt=""
+                  class="pago__checked"
+                />
+
+                <p>
+                  <span class="fw-bold">2 post por semana</span> con servicio de
+                  diseño gráfico y copywriting.
+                </p>
               </li>
               <!-- li end -->
-              <!-- li start -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">4</label>
-                <input type="radio" name="select" class="pago__inputRadio" />
+
+              <!-- li end -->
+              <li class="d-flex align-items-center gap-1 mT-2">
+                <img
+                  src="images/CP/comprobado.png"
+                  alt=""
+                  class="pago__checked"
+                />
+
+                <p>
+                  Contratando plan trimestral
+                  <span class="fw-bold">no hay cuota de alt.</span>
+                </p>
               </li>
               <!-- li end -->
-              <!-- li star -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">5</label>
-                <input type="radio" name="select" class="pago__inputRadio" />
-              </li>
+
               <!-- li end -->
-              <!-- li start -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">6</label>
-                <input type="radio" name="select" class="pago__inputRadio" />
+              <li class="d-flex align-items-center gap-1 mT-2">
+                <img
+                  src="images/CP/comprobado.png"
+                  alt=""
+                  class="pago__checked"
+                />
+
+                <p>Adicional por red social: 120 al mes.</p>
               </li>
               <!-- li end -->
             </ul>
@@ -154,179 +162,99 @@
           </div>
         </div>
 
-        <div class="d-flex flex-direction-reverse-column mT-3">
-          <div>
-            <h2 class="text-transform-uppercase font-jost fs-2">
-              post y copywrite semanal
-            </h2>
-            <p class="line-height-md fs-small mT-1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reiciendis modi magnam qui similique incidunt iure laborum
-              aperiam. Animi, tenetur in.
-            </p>
-
-            <ul class="pago__radioBox mT-2">
-              <!-- li start -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">1</label>
-                <input
-                  type="radio"
-                  name="selectPost"
-                  class="pago__inputRadio"
-                />
-              </li>
-              <!-- li end -->
-              <!-- li star -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">2</label>
-                <input
-                  type="radio"
-                  name="selectPost"
-                  class="pago__inputRadio"
-                  checked
-                />
-              </li>
-              <!-- li end -->
-              <!-- li start -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">3</label>
-                <input
-                  type="radio"
-                  name="selectPost"
-                  class="pago__inputRadio"
-                />
-              </li>
-              <!-- li end -->
-              <!-- li start -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">4</label>
-                <input
-                  type="radio"
-                  name="selectPost"
-                  class="pago__inputRadio"
-                />
-              </li>
-              <!-- li end -->
-              <!-- li star -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">5</label>
-                <input
-                  type="radio"
-                  name="selectPost"
-                  class="pago__inputRadio"
-                />
-              </li>
-              <!-- li end -->
-              <!-- li start -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">6</label>
-                <input
-                  type="radio"
-                  name="selectPost"
-                  class="pago__inputRadio"
-                />
-              </li>
-              <!-- li end -->
-            </ul>
-          </div>
-
-          <div>
-            <label class="switch">
-              <input type="checkbox" checked />
-              <span class="slider round"></span>
-            </label>
-          </div>
-        </div>
-
-        <div class="pago__disabled d-flex flex-direction-reverse-column mT-3">
-          <div>
-            <h2 class="text-transform-uppercase font-jost fs-2">
-              plan trimestral
-            </h2>
-            <p class="line-height-md fs-small mT-1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reiciendis modi magnam qui similique incidunt iure laborum
-              aperiam. Animi, tenetur in.
-            </p>
-          </div>
-
-          <div>
-            <label class="switch">
-              <input type="checkbox" />
-              <span class="slider round"></span>
-            </label>
-          </div>
-        </div>
-
-        <div class="pago__disabled d-flex flex-direction-reverse-column mT-3">
-          <div>
-            <h2 class="text-transform-uppercase font-jost fs-2">
-              red social adicional
-            </h2>
-            <p class="line-height-md fs-small mT-1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reiciendis modi magnam qui similique incidunt iure laborum
-              aperiam. Animi, tenetur in.
-            </p>
-
-            <ul class="pago__radioBox mT-2">
-              <!-- li start -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">1</label>
-                <input type="radio" name="selectRed" class="pago__inputRadio" />
-              </li>
-              <!-- li end -->
-              <!-- li star -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">2</label>
-                <input
-                  type="radio"
-                  name="selectRed"
-                  class="pago__inputRadio"
-                  checked
-                />
-              </li>
-              <!-- li end -->
-              <!-- li start -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">3</label>
-                <input type="radio" name="selectRed" class="pago__inputRadio" />
-              </li>
-              <!-- li end -->
-              <!-- li start -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">4</label>
-                <input type="radio" name="selectRed" class="pago__inputRadio" />
-              </li>
-              <!-- li end -->
-              <!-- li star -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">5</label>
-                <input type="radio" name="selectRed" class="pago__inputRadio" />
-              </li>
-              <!-- li end -->
-              <!-- li start -->
-              <li class="d-flex flex-direction-column align-items-center gap-1">
-                <label for="#" class="fs-small">6</label>
-                <input type="radio" name="selectRed" class="pago__inputRadio" />
-              </li>
-              <!-- li end -->
-            </ul>
-          </div>
-
-          <div>
-            <label class="switch">
-              <input type="checkbox" />
-              <span class="slider round"></span>
-            </label>
-          </div>
-        </div>
-
-        <footer class="d-flex align-items-center justify-content-between c-main fs-3 pT-2 mT-3">
+        <div
+          class="pago__border d-flex align-items-center justify-content-between c-main fs-3 pT-2 mT-3"
+        >
           <p class="pago__total text-transform-uppercase">TOTAL:</p>
 
-          <p class="pago__total text-transform-uppercase">300.25€</p>
-        </footer>
+          <p class="pago__total text-transform-uppercase">
+            <span class="fw-bold">450€/mes</span> + 150€ de alta
+          </p>
+        </div>
+
+        <div
+          class="d-flex flex-direction-reverse-column bg-white pago__disabled flexContainer__box--radius border-dark pY-2 pX-2 mT-2"
+        >
+          <div class="flex-1">
+            <h2 class="text-transform-uppercase fs-md">Paquete Nautilus</h2>
+            <p class="line-height-md fs-small mT-1">
+              Para alcanzar velocidad de crucero
+            </p>
+
+            <ul class="fs-2 mT-2">
+              <!-- li end -->
+              <li class="d-flex align-items-center gap-1">
+                <img
+                  src="images/CP/comprobado.png"
+                  alt=""
+                  class="pago__checked"
+                />
+
+                <p><span class="fw-bold">Gestión</span> de 2 redes sociales.</p>
+              </li>
+              <!-- li end -->
+
+              <!-- li end -->
+              <li class="d-flex align-items-center gap-1 mT-2">
+                <img
+                  src="images/CP/comprobado.png"
+                  alt=""
+                  class="pago__checked"
+                />
+
+                <p>
+                  <span class="fw-bold">3 post por semana</span> con servicio de
+                  diseño gráfico y copywriting.
+                </p>
+              </li>
+              <!-- li end -->
+
+              <!-- li end -->
+              <li class="d-flex align-items-center gap-1 mT-2">
+                <img
+                  src="images/CP/comprobado.png"
+                  alt=""
+                  class="pago__checked"
+                />
+
+                <p>
+                  Contratando plan trimestral
+                  <span class="fw-bold">no hay cuota de alta.</span>
+                </p>
+              </li>
+              <!-- li end -->
+
+              <!-- li end -->
+              <li class="d-flex align-items-center gap-1 mT-2">
+                <img
+                  src="images/CP/comprobado.png"
+                  alt=""
+                  class="pago__checked"
+                />
+
+                <p>Adicional por red social: 130€ al mes.</p>
+              </li>
+              <!-- li end -->
+            </ul>
+          </div>
+
+          <div>
+            <label class="switch">
+              <input type="checkbox" />
+              <span class="slider round"></span>
+            </label>
+          </div>
+        </div>
+
+        <div
+          class="d-flex align-items-center justify-content-between pago__disabled fs-3 pT-2 mT-3"
+        >
+          <p class="pago__total text-transform-uppercase">TOTAL:</p>
+
+          <p class="pago__total text-transform-uppercase">
+            <span class="fw-bold">650€/mes</span> + 150€ de alta
+          </p>
+        </div>
       </form>
     </div>
 
